[package]
name = "convertoid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25", features = ["rt", "macros", "fs", "process"] }
reqwest = { version = "0.11", default-features = false, features = ["cookies", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0" }
structopt = { version = "0.3" }
lazy-regex = { version = "2.5" }
dotenv = { version = "0.15" }
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
simplelog = { version = "0.12" }
log = { version = "0.4" }
derive_builder = { version = "0.12" }
walkdir = { version = "2.3" }
bytes = { version = "1.4" }
futures = { version = "0.3", default-features = false, features = ["std"] }
dialoguer = { version = "0.10", default-features = false }
indicatif = { version = "0.17" }
